--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,30 +1,59 @@
-body {
-    background-color: black;
-    text-align: center;
-    font-family: "Verdana", sans-serif;
-    color: white;
-  }
-  
-  .cta {
-    color: aquamarine;
-    font-size: 16px;
-  }
-  
-  h1 {
-    font-size: 50px;
-    font-weight: normal;
-  }
-  
-  h2 {
-    font-size: 42px;
-    font-weight: 300;
-  }
-  
-  p {
-    font-size: 21px;
-    color: gray;
-  }
-  
-  .footer {
-    text-align: right;
-  } 
+ body {
+  background-color: black;
+  text-align: centred;
+  font-family: "Verdana", sans-serif;
+  color: white;
+}
+
+a{
+  display: inline;
+  color: aquamarine;
+  font-size: 16px;
+  margin : 600px ;
+}
+
+h1 {
+  font-family: "Verdana"
+  font-size: 50px;
+  font-weight: normal;
+  text-align: centred;
+  padding : 0 350px;
+  width: 100%
+}
+.video-container{
+    display:flex;
+    justify-content: centre;
+    margin: 20px 0;
+}
+.centered-video{
+  display: block;
+  margin: 20px auto;
+  width: 80%;
+  max-width: 400px;
+}
+
+h2 {
+  font-family= "Verdana";
+  font-size: 42px;
+  font-weight: 300;
+  text-align: centre;
+  padding: 20px 500px;
+  width: 100%;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+  font-family: "Verdana";
+  text-align: centre;
+  padding: 0px 300px;
+  width:100%
+}
+
+footer {
+  text-align: right;
+  right: 0;
+  bottom: 0;
+  padding :0 1050px ;
+  color: gray;
+} 
